packages/default/scss/checkbox/_layout.scss
@include exports( "checkbox/layout" ) {

    // Checkbox
    .k-checkbox {
        @include border-radius( $checkbox-radius );
        margin: 0;
        padding: 0;
        width: $checkbox-size;
        height: $checkbox-size;
        line-height: initial;
        border-width: $checkbox-border-width;
        border-style: solid;
        outline: 0;
        box-sizing: border-box;
        background-position: center;
        background-repeat: no-repeat;
        background-size: contain;
        display: inline-block;
        flex: none;
        vertical-align: middle;
        position: relative;
        cursor: pointer;
        -webkit-appearance: none;
    }

    // Checkbox indicator
    .k-checkbox::before {
        @if $checkbox-icon-type == "glyph" {
            content: $checkbox-checked-glyph;
            width: $checkbox-glyph-size;
            height: $checkbox-glyph-size;
            font-size: $checkbox-glyph-size;
            font-family: $checkbox-glyph-font-family;
            line-height: 1;
            transform: scale(0) translate(-50%, -50%);
            overflow: hidden;
            position: absolute;
            top: 50%;
            left: 50%;
        }

        @if $checkbox-icon-type == "marker" {
            content: "";
            width: $checkbox-marker-checked-width;
            height: $checkbox-marker-checked-height;
            background-color: currentColor;
            transform: scale(0) translate(-50%, -50%);
            overflow: hidden;
            position: absolute;
            top: 50%;
            left: 50%;
        }
    }


    // Checked state
    .k-checkbox:checked,
    .k-checkbox.k-checked {
        @if $checkbox-icon-type == "image" {
            background-image: $checkbox-checked-image;
        }

        @if $checkbox-icon-type == "glyph" {
            &::before {
                transform: scale(1) translate(-50%, -50%);
            }
        }

        @if $checkbox-icon-type == "marker" {
            &::before {
                transform: scale(1) translate(-50%, -50%);
            }
        }
    }


    // Indeterminate state
    .k-checkbox:indeterminate,
    .k-checkbox.k-indeterminate,
    .k-checkbox.k-state-indeterminate {
        @if $checkbox-icon-type == "image" {
            background-image: $checkbox-indeterminate-image;
        }

        @if $checkbox-icon-type == "glyph" {
            &::before {
                content: $checkbox-indeterminate-glyph;
                transform: scale(1) translate(-50%, -50%);
            }
        }

        @if $checkbox-icon-type == "marker" {
            &::before {
                width: $checkbox-maker-indeterminate-width;
                height: $checkbox-marker-indeterminate-height;
                transform: scale(1) translate(-50%, -50%);
            }
        }
    }


    // Disabled state
    .k-checkbox:disabled,
    .k-checkbox.k-disabled,
    .k-checkbox:disabled + .k-checkbox-label,
    .k-checkbox.k-disabled + .k-checkbox-label {
        @include disabled( $disabled-styling );
    }

    // Checkbox label
    .k-checkbox-label {
        margin: 0;
        padding: 0;
        line-height: $checkbox-line-height;
        display: inline-flex;
        align-items: flex-start;
        vertical-align: middle;
        position: relative;
        cursor: pointer;

        .k-label {
            cursor: pointer;
        }

        .k-ripple {
            top: $checkbox-size / 2;
            left: $checkbox-size / 2;
            right: auto;
            bottom: auto;
            width: $checkbox-size * 5 / 2;
            height: $checkbox-size * 5 / 2;
            transform: translate(-50%, -50%);
            border-radius: 50%;

            // Hide ripple temporarily
            visibility: hidden !important; // sass-lint:disable-line no-important
        }

        .k-ripple-blob {
            // sass-lint:disable-block no-important
            // use !important until ripple can apply these styles from the script
            top: 50% !important;
            left: 50% !important;
            width: 200% !important;
            height: 200% !important;
        }
    }
    .k-checkbox + .k-checkbox-label {
        display: inline;
    }
    .k-checkbox + .k-checkbox-label,
    .k-checkbox-label + .k-checkbox {
        margin-left: $checkbox-label-margin-x;
    }
    .k-checkbox-label > .k-checkbox {
        margin-right: $checkbox-label-margin-x;
        flex-shrink: 0;
    }
    kendo-label.k-checkbox-label > .k-checkbox:last-child {
        margin-right: 0;
    }
    kendo-label.k-checkbox-label > .k-label:first-child {
        margin-right: $checkbox-label-margin-x;
    }
    kendo-label.k-checkbox-label > .k-label {
        display: inline;
    }


    // Empty label
    .k-checkbox-label:empty {
        display: none !important; // sass-lint:disable-line no-important
    }


    // Label with no text
    .k-checkbox-label.k-no-text {
        min-width: 1px;
    }


    // Checkbox list
    .k-checkbox-list {
        margin: $checkbox-list-margin;
        padding: $checkbox-list-padding;
        list-style: none;

        .k-checkbox-item {
            padding: $checkbox-list-item-padding-y $checkbox-list-item-padding-x;
        }
    }

    .k-list-horizontal {
        .k-checkbox-item {
            display: inline-block;
            margin: 0 $checkbox-list-horizontal-item-margin-x 0 0;

            &:last-child {
                margin-right: 0;
            }
        }
    }


    // RTL
    .k-rtl,
    [dir="rtl"] {
        .k-checkbox + .k-checkbox-label,
        .k-checkbox-label + .k-checkbox {
            margin-left: 0;
            margin-right: $checkbox-label-margin-x;
        }
        .k-checkbox-label > .k-checkbox {
            margin-right: 0;
            margin-left: $checkbox-label-margin-x;
        }
        kendo-label.k-checkbox-label > .k-checkbox:last-child {
            margin-left: 0;
        }
        kendo-label.k-checkbox-label > .k-label:first-child {
            margin-right: 0;
            margin-left: $checkbox-label-margin-x;
        }

        .k-list-horizontal {
            .k-checkbox-item {
                margin-right: 0;
                margin-left: $checkbox-list-horizontal-item-margin-x;

                &:last-child {
                    margin-left: 0;
                }
            }
        }
    }

    .k-ripple-container {
        .k-checkbox::after {
            content: "";
            display: block;
            position: absolute;
            left: 0;
            top: 0;
            width: $checkbox-ripple-size;
            height: $checkbox-ripple-size;
            margin-left: $checkbox-ripple-margin;
            margin-top: $checkbox-ripple-margin;
            border-radius: 100%;
            z-index: 1;
            transform: scale(0);
        }

        .k-checkbox:disabled::after,
        .k-checkbox.k-disabled::after {
            display: none;
        }
    }

}




@include exports( "checkbox/layout/edge" ) {

    .k-checkbox::-ms-check {
        border-width: 1px;
        border-color: inherit;
        color: inherit;
        background-color: inherit;
    }

}

